--- a/GoalBook/Base.lproj/Main.storyboard
+++ b/GoalBook/Base.lproj/Main.storyboard
@@ -150,18 +150,39 @@
                                                     <color key="textColor" red="0.50656329310000003" green="0.2275080153" blue="0.3282407228" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j3n-9z-AFL">
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="79.5"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Goal Completed" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lSS-MU-Pgr">
+                                                            <rect key="frame" x="70" y="17" width="235.5" height="45.5"/>
+                                                            <fontDescription key="fontDescription" name="ChalkboardSE-Bold" family="Chalkboard SE" pointSize="32"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" red="0.50656329310000003" green="0.2275080153" blue="0.3282407228" alpha="0.90000000000000002" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstItem="lSS-MU-Pgr" firstAttribute="centerX" secondItem="j3n-9z-AFL" secondAttribute="centerX" id="37C-ZK-t3t"/>
+                                                        <constraint firstItem="lSS-MU-Pgr" firstAttribute="centerY" secondItem="j3n-9z-AFL" secondAttribute="centerY" id="nMq-AC-9LV"/>
+                                                    </constraints>
+                                                </view>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstItem="j3n-9z-AFL" firstAttribute="leading" secondItem="nGZ-jH-s0H" secondAttribute="leading" id="0gp-K2-TZJ"/>
                                                 <constraint firstItem="zJu-Va-38a" firstAttribute="leading" secondItem="nGZ-jH-s0H" secondAttribute="leading" constant="10" id="8lg-3K-L9U"/>
                                                 <constraint firstItem="Pkc-Xo-Uo0" firstAttribute="leading" secondItem="zJu-Va-38a" secondAttribute="trailing" constant="8" id="Fsl-Rm-qpS"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="zJu-Va-38a" secondAttribute="bottom" constant="8" id="G5s-Bh-yvs"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="Pkc-Xo-Uo0" secondAttribute="bottom" constant="8" id="M3p-ce-Pco"/>
                                                 <constraint firstItem="Pkc-Xo-Uo0" firstAttribute="top" secondItem="nGZ-jH-s0H" secondAttribute="topMargin" constant="8" id="Xgj-DD-o4C"/>
                                                 <constraint firstItem="Pkc-Xo-Uo0" firstAttribute="trailing" secondItem="nGZ-jH-s0H" secondAttribute="trailingMargin" constant="8" id="Xky-lP-cwS"/>
+                                                <constraint firstItem="j3n-9z-AFL" firstAttribute="top" secondItem="nGZ-jH-s0H" secondAttribute="top" id="gIs-oV-0AL"/>
+                                                <constraint firstAttribute="trailing" secondItem="j3n-9z-AFL" secondAttribute="trailing" id="lac-jA-l8g"/>
                                                 <constraint firstItem="zJu-Va-38a" firstAttribute="top" secondItem="nGZ-jH-s0H" secondAttribute="topMargin" constant="8" id="odc-rk-7e6"/>
+                                                <constraint firstAttribute="bottom" secondItem="j3n-9z-AFL" secondAttribute="bottom" id="upX-AV-Q71"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="completionView" destination="j3n-9z-AFL" id="Lfu-wE-BCA"/>
                                             <outlet property="goalDescriptionLbl" destination="uix-gu-61d" id="Vqt-Bt-hux"/>
                                             <outlet property="goalProgressLbl" destination="Pkc-Xo-Uo0" id="8LI-rT-PQi"/>
                                             <outlet property="goalTypeLbl" destination="Srx-EW-RJt" id="yym-s1-lty"/>
