--- a/GoalBook/Base.lproj/Main.storyboard
+++ b/GoalBook/Base.lproj/Main.storyboard
@@ -60,13 +60,30 @@
                                             <action selector="addGoalBtnPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="NtT-V4-wDp"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="crp-ym-hbe">
+                                        <rect key="frame" x="8" y="24" width="40" height="38"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="38" id="Sjw-QQ-mfs"/>
+                                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="40" id="xVP-ys-wJ6"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="ChalkboardSE-Regular" family="Chalkboard SE" pointSize="18"/>
+                                        <state key="normal" title="Undo">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="undoRemovedGoal:" destination="BYZ-38-t0r" eventType="touchUpInside" id="p2t-6v-UJh"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.50656329314720816" green="0.22750801529250095" blue="0.32824072280680433" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="crp-ym-hbe" secondAttribute="trailing" constant="20" symbolic="YES" id="601-Zx-tMt"/>
                                     <constraint firstAttribute="bottom" secondItem="b3X-Sb-NKG" secondAttribute="bottom" constant="8" id="6S3-9D-e6u"/>
                                     <constraint firstAttribute="height" constant="70" id="Ec7-Zq-cwJ"/>
                                     <constraint firstItem="b3X-Sb-NKG" firstAttribute="centerX" secondItem="A8w-1d-lcO" secondAttribute="centerX" id="FgJ-4s-kle"/>
                                     <constraint firstAttribute="trailing" secondItem="iFD-X6-uon" secondAttribute="trailing" constant="8" id="IKT-0s-ClQ"/>
+                                    <constraint firstItem="crp-ym-hbe" firstAttribute="leading" secondItem="A8w-1d-lcO" secondAttribute="leading" constant="8" id="ch1-tL-860"/>
+                                    <constraint firstAttribute="bottom" secondItem="crp-ym-hbe" secondAttribute="bottom" constant="8" id="ciq-Qm-lvu"/>
                                     <constraint firstItem="iFD-X6-uon" firstAttribute="bottom" secondItem="b3X-Sb-NKG" secondAttribute="bottom" id="p3X-zH-j0H"/>
                                 </constraints>
                             </view>
@@ -154,8 +171,8 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="375" height="79.5"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Goal Completed" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lSS-MU-Pgr">
-                                                            <rect key="frame" x="70" y="17" width="235.5" height="45.5"/>
-                                                            <fontDescription key="fontDescription" name="ChalkboardSE-Bold" family="Chalkboard SE" pointSize="32"/>
+                                                            <rect key="frame" x="96" y="22.5" width="184" height="35.5"/>
+                                                            <fontDescription key="fontDescription" name="ChalkboardSE-Bold" family="Chalkboard SE" pointSize="25"/>
                                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
@@ -167,6 +184,7 @@
                                                     </constraints>
                                                 </view>
                                             </subviews>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstItem="j3n-9z-AFL" firstAttribute="leading" secondItem="nGZ-jH-s0H" secondAttribute="leading" id="0gp-K2-TZJ"/>
                                                 <constraint firstItem="zJu-Va-38a" firstAttribute="leading" secondItem="nGZ-jH-s0H" secondAttribute="leading" constant="10" id="8lg-3K-L9U"/>
@@ -181,6 +199,7 @@
                                                 <constraint firstAttribute="bottom" secondItem="j3n-9z-AFL" secondAttribute="bottom" id="upX-AV-Q71"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <connections>
                                             <outlet property="completionView" destination="j3n-9z-AFL" id="Lfu-wE-BCA"/>
                                             <outlet property="goalDescriptionLbl" destination="uix-gu-61d" id="Vqt-Bt-hux"/>
@@ -190,13 +209,38 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c0n-aD-omm">
+                                <rect key="frame" x="0.0" y="70" width="375" height="597"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your goal is completed" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="Uv2-wD-SLl">
+                                        <rect key="frame" x="0.0" y="274" width="375" height="50"/>
+                                        <color key="backgroundColor" red="0.50656329310000003" green="0.2275080153" blue="0.3282407228" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="sZg-x1-oLr"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="ChalkboardSE-Bold" family="Chalkboard SE" pointSize="27"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.40000000000000002" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="Uv2-wD-SLl" secondAttribute="trailing" id="WAD-jo-byF"/>
+                                    <constraint firstItem="Uv2-wD-SLl" firstAttribute="centerY" secondItem="c0n-aD-omm" secondAttribute="centerY" id="p0f-Qp-5ee"/>
+                                    <constraint firstItem="Uv2-wD-SLl" firstAttribute="leading" secondItem="c0n-aD-omm" secondAttribute="leading" id="wEt-rt-aVg"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="A8w-1d-lcO" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="17z-x1-Zd4"/>
                             <constraint firstItem="Rxt-CZ-iJy" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="48m-aH-pkh"/>
+                            <constraint firstItem="c0n-aD-omm" firstAttribute="top" secondItem="A8w-1d-lcO" secondAttribute="bottom" id="5XE-0B-3GX"/>
+                            <constraint firstItem="c0n-aD-omm" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="E14-AF-yf5"/>
                             <constraint firstItem="Rxt-CZ-iJy" firstAttribute="top" secondItem="A8w-1d-lcO" secondAttribute="bottom" id="E2H-ty-FEH"/>
                             <constraint firstItem="Rxt-CZ-iJy" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="F6H-ze-NQ5"/>
+                            <constraint firstAttribute="bottom" secondItem="c0n-aD-omm" secondAttribute="bottom" id="FMv-7E-VTD"/>
+                            <constraint firstItem="c0n-aD-omm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="NUf-tY-aeL"/>
                             <constraint firstItem="Rxt-CZ-iJy" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="OHj-e7-TJQ"/>
                             <constraint firstItem="BT7-Pa-CO7" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="f9o-cx-8J2"/>
                             <constraint firstItem="BT7-Pa-CO7" firstAttribute="top" secondItem="A8w-1d-lcO" secondAttribute="bottom" constant="100" id="mal-BG-5Pw"/>
@@ -207,6 +251,8 @@
                     </view>
                     <connections>
                         <outlet property="tableView" destination="Rxt-CZ-iJy" id="CXe-fY-eZA"/>
+                        <outlet property="undoBtn" destination="crp-ym-hbe" id="QsT-hw-dc9"/>
+                        <outlet property="warningView" destination="c0n-aD-omm" id="tka-cz-cWR"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
